binaryen/src/expression/snapshots/binaryen__expression__call__tests__should_validate_call_indirect_expression.snap
---
source: binaryen/src/expression/call.rs
expression: text
---
(module
 (type $0 (func (param i32) (result i32)))
 (table $table 1 1 funcref)
 (elem $elem (i32.const 0) $callee)
 (func $callee (param $0 i32) (result i32)
  (local.get $0)
 )
 (func $caller (param $0 i32) (result i32)
  (call_indirect (type $0)
   (local.get $0)
   (i32.const 0)
  )
 )
)
